update SelAssert