@@ -1,10 +1,9 @@
 package com.senelium.assertion.core;
 
 import com.senelium.element.Element;
+import com.senelium.utils.CustomExpectedConditions;
 import lombok.Getter;
 import lombok.Setter;
-import org.openqa.selenium.TimeoutException;
-import org.openqa.selenium.support.ui.ExpectedCondition;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 
 @Getter
@@ -25,60 +24,71 @@ public class ElementAssertion extends Assertion {
     }
 
     public void toBeVisible(String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.visibilityOfElementLocated(element.getLocator()),
-                timeout,
-                message + "\nElement [" + element.getLocator() + "] is expected to be visible but found invisible.",
-                "visible",
-                "invisible"
-        );
+        this.builder().condition(ExpectedConditions.visibilityOfElementLocated(element.getLocator()))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to be visible but found invisible.".formatted(message, element.getLocator()),
+                        "visible", "invisible"))
+                .execute();
     }
 
     public void toBeInvisible() {
-        toBeInvisible("");
+        toBeInvisible("", null);
     }
 
     public void toBeInvisible(String message) {
-        toBeInVisible(message, null);
+        toBeInvisible(message, null);
     }
 
-    public void toBeInVisible(String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.invisibilityOfElementLocated(element.getLocator()),
-                timeout,
-                message + "\nElement [" + element.getLocator() + "] is expected to be invisible but found visible.",
-                "invisible",
-                "visible"
-        );
+    public void toBeInvisible(Integer timeout) {
+        toBeInvisible("", timeout);
+    }
+
+    public void toBeInvisible(String message, Integer timeout) {
+        this.builder().condition(ExpectedConditions.invisibilityOfElementLocated(element.getLocator()))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to be invisible but found visible.".formatted(message, element.getLocator()),
+                        "invisible", "visible"))
+                .execute();
     }
 
     public void toHaveText(String expectedText) {
         toHaveText(expectedText, "", null);
     }
 
-    //Get text already get the visible text
+    public void toHaveText(String expectedText, String message) {
+        toHaveText(expectedText, message, null);
+    }
+
+    public void toHaveText(String expectedText, Integer timeout) {
+        toHaveText(expectedText, "", timeout);
+    }
+
     public void toHaveText(String expectedText, String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.textToBe(element.getLocator(), expectedText),
-                timeout,
-                String.format("%s\nElement [%s] is expected to have text {%s} but it does not.", message, element.getLocator(), expectedText),
-                expectedText,
-                element.getText(true)
-        );
+        this.builder().condition(ExpectedConditions.textToBe(element.getLocator(), expectedText))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to have text {%s} but it does not.".formatted(message, element.getLocator(), expectedText),
+                        expectedText, () -> element.getText(true)))
+                .execute();
     }
 
     public void toNotHaveText(String oldText) {
         toNotHaveText(oldText, "", null);
     }
 
+    public void toNotHaveText(String oldText, String message) {
+        toNotHaveText(oldText, message, null);
+    }
+
+    public void toNotHaveText(String oldText, Integer timeout) {
+        toNotHaveText(oldText, "", timeout);
+    }
+
     public void toNotHaveText(String oldText, String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.not(ExpectedConditions.textToBe(element.getLocator(), oldText)),
-                timeout,
-                String.format("%s\nElement [%s] is expected to not have text {%s} but it does.", message, element.getLocator(), oldText),
-                "not have text " + oldText,
-                element.getText()
-        );
+        this.builder().condition(ExpectedConditions.not(ExpectedConditions.textToBe(element.getLocator(), oldText)))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to NOT have text {%s} but it does.".formatted(message, element.getLocator(), oldText),
+                        "NOT have text " + oldText, oldText))
+                .execute();
     }
 
     public void toContainText(String expectedText) {
@@ -94,27 +104,31 @@ public class ElementAssertion extends Assertion {
     }
 
     public void toContainText(String expectedText, String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.textToBePresentInElementLocated(element.getLocator(), expectedText),
-                timeout,
-                String.format("%s\nElement [%s] is expected to contains {%s} but it does not.", message, element.getLocator(), expectedText),
-                expectedText,
-                element.getText(true)
-        );
+        this.builder().condition(ExpectedConditions.textToBePresentInElementLocated(element.getLocator(), expectedText))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to contains {%s} but it does not.".formatted(message, element.getLocator(), expectedText),
+                        "contains " + expectedText, () -> element.getText(true)))
+                .execute();
     }
 
     public void imgToBeVisible() {
         this.imgToBeVisible("", null);
     }
 
+    public void imgToBeVisible(String message) {
+        this.imgToBeVisible(message, null);
+    }
+
+    public void imgToBeVisible(Integer timeout) {
+        this.imgToBeVisible("", timeout);
+    }
+
     public void imgToBeVisible(String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.not(ExpectedConditions.domPropertyToBe(element.findVisibleElement(), "naturalWidth", "0")),
-                timeout,
-                message + "\nImage element [" + element.getLocator() + "] is expected to be visible but found invisible or broken.",
-                "visible",
-                "invisible or broken"
-        );
+        this.builder().condition(CustomExpectedConditions.imageIsVisible(element.findVisibleElement()))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nImage element [%s] is expected to be visible but found invisible or broken.".formatted(message, element.getLocator()),
+                        "visible ", "invisible or broken"))
+                .execute();
     }
 
     public void toBeSelected() {
@@ -130,13 +144,11 @@ public class ElementAssertion extends Assertion {
     }
 
     public void toBeSelected(String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.elementToBeSelected(element.getLocator()),
-                timeout,
-                message + "\nElement [" + element.getLocator() + "] is expected to be selected but found unselected.",
-                "selected",
-                "not selected"
-        );
+        this.builder().condition(ExpectedConditions.elementToBeSelected(element.getLocator()))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to be selected but found unselected.".formatted(message, element.getLocator()),
+                        "selected ", "not selected"))
+                .execute();
     }
 
     public void toBeUnselected() {
@@ -152,13 +164,11 @@ public class ElementAssertion extends Assertion {
     }
 
     public void toBeUnselected(String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.elementSelectionStateToBe(this.element.getLocator(), false),
-                timeout,
-                message + "\nElement [" + element.getLocator() + "] is expected to be unselected but found selected.",
-                "unselected",
-                "selected"
-        );
+        this.builder().condition(ExpectedConditions.elementSelectionStateToBe(this.element.getLocator(), false))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to be unselected but found selected.".formatted(message, element.getLocator()),
+                        "unselected ", "selected"))
+                .execute();
     }
 
     public void toBeEnabled() {
@@ -174,13 +184,11 @@ public class ElementAssertion extends Assertion {
     }
 
     public void toBeEnabled(String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.elementToBeClickable(element.getLocator()),
-                timeout,
-                message + "\nElement [" + element.getLocator() + "] is expected to be enabled but found disabled.",
-                "enabled",
-                "disabled"
-        );
+        this.builder().condition(ExpectedConditions.elementToBeClickable(element.getLocator()))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to be enabled but found disabled.".formatted(message, element.getLocator()),
+                        "enabled ", "disabled"))
+                .execute();
     }
 
     public void toBeDisabled() {
@@ -196,13 +204,11 @@ public class ElementAssertion extends Assertion {
     }
 
     public void toBeDisabled(String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.not(ExpectedConditions.elementToBeClickable(element.getLocator())),
-                timeout,
-                message + "\nElement [" + element.getLocator() + "] is expected to be disabled but found enabled.",
-                "disabled",
-                "enabled"
-        );
+        this.builder().condition(ExpectedConditions.not(ExpectedConditions.elementToBeClickable(element.getLocator())))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to be disabled but found enabled.".formatted(message, element.getLocator()),
+                        "disabled ", "enabled"))
+                .execute();
     }
 
     public void toBeExisting() {
@@ -218,13 +224,11 @@ public class ElementAssertion extends Assertion {
     }
 
     public void toBeExisting(String message, Integer timeout) {
-        this.toBe(
-                ExpectedConditions.presenceOfElementLocated(element.getLocator()),
-                timeout,
-                message + "\nElement [" + element.getLocator() + "] is expected to be existing but not.",
-                "present in the DOM",
-                "not presenting"
-        );
+        this.builder().condition(ExpectedConditions.presenceOfElementLocated(element.getLocator()))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to be existing on DOM but not.".formatted(message, element.getLocator()),
+                        "present in the DOM ", "not presenting"))
+                .execute();
     }
 
     public void toBeNotExisting() {
@@ -239,23 +243,13 @@ public class ElementAssertion extends Assertion {
         toBeNotExisting("", timeout);
     }
 
+    //From findElement document: ...findElement should not be used to look for non-present elements,
+    //use findElements(By) and assert zero length response instead.
     public void toBeNotExisting(String message, Integer timeout) {
-        this.toBe(
-                //From findElement document: ...findElement should not be used to look for non-present elements,
-                //use findElements(By) and assert zero length response instead.
-                ExpectedConditions.not(ExpectedConditions.presenceOfAllElementsLocatedBy(element.getLocator())),
-                timeout,
-                message + "\nElement [" + element.getLocator() + "] is expected to be not existing in the DOM but existing.",
-                "not presenting in the DOM",
-                "presenting"
-        );
-    }
-
-    private <T> T waitFor(ExpectedCondition<T> expectedCondition, Integer timeout) {
-        return this.waiter(timeout).until(expectedCondition);
-    }
-
-    private void toBe(ExpectedCondition<?> expectedCondition, Integer timeout, String message, String expected, String actual) {
-        super.toBe(() -> this.waitFor(expectedCondition, timeout), timeout, message, expected,actual);
+        this.builder().condition(ExpectedConditions.not(ExpectedConditions.presenceOfAllElementsLocatedBy(element.getLocator())))
+                .timeout(timeout)
+                .message(new AssertMessage("%s\nElement [%s] is expected to be not existing in the DOM but existing.".formatted(message, element.getLocator()),
+                        "not presenting in the DOM", "presenting in the DOM"))
+                .execute();
     }
 }
